update results remove racing page

--- a/Results.html
+++ b/Results.html
@@ -29,7 +29,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
+                
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
@@ -43,27 +43,26 @@
         <ul class="results__list">
             <li class="list__title">Races</li>
             <li class="results-list__year">2022</li>
-            <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>(165km 10200m d+) 24:20 --3<sup class="sup">rd</sup>
+            <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:20 <i class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup>
             </li>
-            <li class="results-list__item"><span class="race-title">Canfranc-Canfranc</span><br>(102km 8848m d+) 18:28 --1<sup class="sup">st</sup>
+            <li class="results-list__item"><span class="race-title">Canfranc-Canfranc</span><br>102km 8848m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;18:28 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup>
             </li>
-            <li class="results-list__item"><span class="race-title">Les Gabizos Skyrace</span><br>(31km 2400m d+) 3:24 --5<sup class="sup">th</sup></li>
-            <li class="results-list__item"><span class="race-title">GTVO</span><br>(74km 4600m d+) 8:30 --1<sup class="sup">st</sup></li>
-            <li class="results-list__item"><span class="race-title">Patou Skyrace</span><br>(22km 2200m d+) 2:31 --2<sup class="sup">nd</sup></li>
-            <li class="results-list__item"><span class="race-title">Hautacam Trails</span><br>(22km 1650m d+) 2:08 --1<sup class="sup">st</sup></li>
-            <li class="results-list__item"><span class="race-title">Bagneres Classic</span><br>(25km 1500m d+) 2:09 --1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">GTVO</span><br>74km 4600m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;8:30 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">Patou Skyrace</span><br>22km 2200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:31 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
+            <li class="results-list__item"><span class="race-title">Hautacam Trails</span><br>22km 1650m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:08 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">Bagneres Classic</span><br>25km 1500m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:09 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
             <li class="results-list__year">2021</li>
-            <li class="results-list__item"><span class="race-title">Maxi Race Annecy</span><br>(110km 6600m d+) 14:34 --2<sup class="sup">nd</sup></li>
-            <li class="results-list__item"><span class="race-title">Grand Raid Pyrenees</span><br>(220km 13000m d+) 39:40 --2<sup class="sup">nd</sup></li>
+            <li class="results-list__item"><span class="race-title">Maxi Race Annecy</span><br>110km 6600m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;14:34 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
+            <li class="results-list__item"><span class="race-title">Grand Raid Pyrenees</span><br>220km 13000m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;39:40 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
             <li class="results-list__year">2020</li>
-            <li class="results-list__item"><span class="race-title">Tassie Trail Fest</span><br>(55km 1500m d+) 4:19 --1<sup class="sup">st</sup></li>
-            <li class="results-list__item"><span class="race-title">Adelaide Trail Series</span><br>(22km 1000m d+) 1:28 --1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">Tassie Trail Fest</span><br>55km 1500m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;4:19 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">Adelaide Trail Series</span><br>22km 1000m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;1:28 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
             <li class="results-list__year">2019</li>
-            <li class="results-list__item"><span class="race-title">Pyramid Race</span><br>(12.5km 1000m d+) 1:24 --1<sup class="sup">st</sup></li>
+            <li class="results-list__item"><span class="race-title">Pyramid Race</span><br>12.5km 1000m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;1:24 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
             <li class="results-list__year">2018</li>
-            <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>(168km 10000m d+) 31:30 --35<sup class="sup">th</sup></li>
+            <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10000m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;31:30 &nbsp;35<sup class="sup">th</sup></li>
             <li class="results-list__year">2017</li>
-            <li class="results-list__item"><span class="race-title">High Lonesome 100</span><br>(160km 7800m d+) 26:30 --4<sup class="sup">th</sup></li>
+            <li class="results-list__item"><span class="race-title">High Lonesome 100</span><br>160km 7800m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;26:30 &nbsp;4<sup class="sup">th</sup></li>
         </ul>
         <ul class="results__list">
             <li class="list__title">Thru-Hikes</li>
