--- a/blogHome.html
+++ b/blogHome.html
@@ -29,7 +29,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/RacingMF.html" class="nav__link">Racing</a></li>
+               
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
             </ul>
@@ -40,10 +40,9 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
-                
                 <a class="blog-link" href="/blogAerobicBase.html">
                     <div class="blog-entry">
-                        <img class="blog-thumbnail" src="/images/blog-photos/spirit warrior-thumb.jpg" alt="clouds swirling">
+                        <img class="blog-thumbnail" src="/images/blog-photos/spirit-warrior-thumb.jpg" alt="clouds swirling">
                         <div class="article-date">
                             12-11-22
                         </div>
