--- a/home.html
+++ b/home.html
@@ -56,15 +56,12 @@
                 <ul class="nav__list">
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <a href="/RacingMF.html" class="nav__link">racing</a></li>
+                        <a href="/Results.html" class="nav__link">Results</a>
+                    </li>
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <!-- <a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
-                    <li class="nav__item"> -->
                         <a href="/blogHome.html" class="nav__link">Blog</a></li>
-                    <li class="nav__item">
-                        <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
-                        <a href="/Results.html" class="nav__link">Results</a></li>
+                    
                     <li class="nav__item">
                     <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
                         <a href="/contactMF.html" class="nav__link">Contact</a></li>
