--- a/blogAerobicBase.html
+++ b/blogAerobicBase.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <div class="title container">
-        <h3>Get the Most from <br> Your Off-Season Pt. 1<br><span class="italics">Building the Base</span></h3>
+        <h3>Get the Most from <br> Your Off-Season<br><span class="italics">Building the Base</span></h3>
         <h6>Mon 28 November 2022<br>Ben Dhiman</h6>
     </div>
     <div class="article-wrap">
