--- a/blogHome.html
+++ b/blogHome.html
@@ -40,6 +40,17 @@
         </header>
         <div class="blog-article-container container">
             <div class="frame">
+                <a class="blog-link" href="/blogTheMental.html">
+                    <div class="blog-entry">
+                        <img class="blog-thumbnail" src="/images/blog-photos/wrathfulDeity.jpg" alt="Wrathful buddhist deitey">
+                        <div class="article-date">
+                            27-01-23
+                        </div>
+                        <div class="article-title">
+                            <h2>Training<br>Mental Fortitude</h2>
+                        </div>
+                    </div>
+                </a>
                 <a class="blog-link" href="/blogAerobicBase.html">
                     <div class="blog-entry">
                         <img class="blog-thumbnail" src="/images/blog-photos/spirit-warrior-thumb.jpg" alt="clouds swirling">
