--- a/home.html
+++ b/home.html
@@ -39,14 +39,14 @@
         <div class="icon-container">
             <a class="icon-link tooltip" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@ben_dhiman</span></a>
             
-            <a class="icon-link tooltip" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank">
+            <!-- <a class="icon-link tooltip" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank">
                 <i class="fa-brands fa-spotify spotify-icon"></i>
                 <span class="tooltip-text">Checkout my playlists</span>
             </a>
             <a class="icon-link tooltip" href="https://itra.run/RunnerSpace/DHIMAN.Ben/1409387" target="_blank">
                 <i class="fa-solid fa-person-running runner-icon"></i>
                 <span class="tooltip-text-three">ITRA runner profile</span>
-            </a>
+            </a> -->
             <a class="icon-link tooltip" href="https://www.strava.com/athletes/102936151" target="_blank">
                 <i class="fa-brands fa-strava strava-icon"></i>
                 <span class="tooltip-text-four">Strava profile</span>
