--- a/blogTheMental.html
+++ b/blogTheMental.html
@@ -51,13 +51,13 @@
         <div class="content-paragraph container">
             The feat of running 100 miles in the mountains harbors some element of spiritual courage, some flair of transcendence
             which almost contradicts the raw athleticism of racing a triathalon, where peak performance is better understood. Its
-            true that our sport is young and underfunded, but that does not mean ultra-runners don't aspire to maximize thier potential.<br><br>
+            true that our sport is young and underfunded in comparison, but that does not mean ultra-runners don't aspire to maximize thier potential.<br><br>
             <img class="blog-photo-landscape" src="./images/blog-photos/tsoMoriri.jpg" alt="himalayan mountains"><span
                 class="caption">Getting the most from my mitochondria at 6000m Tso Moriri, Ladakh India.</span><br>
          
-            <br>It means there is a mystery to afoot which I believe has to do with the prominent overlapping of the physical and mental
-            framework. Considering the hideous duration of races and the fact that our arena is the wild, maximized performance in
-            ultrarunning lives somewhere in a heady blend of the two.
+            <br>It means there is a mystery afoot which I believe lies in the prominent overlapping of the physical and mental
+            frameworks. Considering the hideous duration of races and the fact that our arena is The Wild, maximized performance in
+            ultrarunning requires a heady blend of endurance beast and zen master.
         
             <div class="content-paragraph-subhead">“When the going gets weird, the weird turn pro."</div>
         Be it night, fog, precipitation, temperature, mud, so many whims of nature effect the way we run. From a metabolic level
@@ -73,8 +73,8 @@
             <br><br>
             In training each moment of weakness should be viewed as an opportunity to get stronger because by clearing the
             hurdle you build corrective thought patterns which over time become entrenched and arise naturally.<br><br>
-            Here is a list of tactics I've found myself using when the training is challenging (as it should). The goal of
-            these strategies is to promote mindfulness, staying present and breaking negativity.<br>
+            Here is a list of tactics I've found myself using when the training is challenging (as it should be). The goal of
+            these strategies is to promote mindfulness, being present and breaking negativity.<br>
             <ul class="article-list ">
                 <li class="article-list__item"><span class="article-list_item-title">Two instead of One</span> <i class="fa-solid fa-angles-right angles-icon"></i> If running for an hour becomes an insurmountable chore, imagine the chore is really two hours, neglect your watch for
                 the maximum amount of time and say to yourself that you will do two hours (hours/miles/climbing interchangeable).
