--- a/blogTheMental.html
+++ b/blogTheMental.html
@@ -50,7 +50,7 @@
         </div>
         <div class="content-paragraph container">
             The feat of running 100 miles in the mountains harbors some element of spiritual courage, some flair of transcendence
-            which almost contradicts the raw athleticism of racing a triathalon, where peak performance is better understood. Its
+            which almost contradicts the raw athleticism of racing an Ironman, where peak performance is better understood. Its
             true that our sport is young and underfunded in comparison, but that does not mean ultra-runners don't aspire to maximize thier potential.<br><br>
             <img class="blog-photo-landscape" src="./images/blog-photos/tsoMoriri.jpg" alt="himalayan mountains"><span
                 class="caption">Getting the most from my mitochondria at 6000m Tso Moriri, Ladakh India.</span><br>
@@ -71,8 +71,8 @@
             consequence of losing the trail to the brutality of pushing when you are broken—without a strong mind we are lost at
             sea.
             <br><br>
-            In training each moment of weakness should be viewed as an opportunity to get stronger because by clearing the
-            hurdle you build corrective thought patterns which over time become entrenched and arise naturally.<br><br>
+            Rather than bemoaning difficulty, view each moment of weakness as an opportunity because by surviving the moment, by clearing the
+            obstacle you affirm resilience and build corrective thought patterns which over time become entrenched and arise naturally.<br><br>
             Here is a list of tactics I've found myself using when the training is challenging (as it should be). The goal of
             these strategies is to promote mindfulness, being present and breaking negativity.<br>
             <ul class="article-list ">
@@ -86,7 +86,7 @@
                 and aloud, “We got this.” “Do the Work.” “Be Strong.” “Race to the Line.” “Get it Done.” Such banal mantras work! Trust
                 me.</li>
                 <li class="article-list__item"><span class="article-list_item-title">Shhhhh</span> <i class="fa-solid fa-angles-right angles-icon"></i> If there is something big and scary ahead, don't talk about it, kill the urge to imagine it. In the midst of a big
-                climb, instead of wishing it away, ask for more.</li>
+                climb, instead of wishing it away, Ask for More.</li>
                 <li class="article-list__item"><span class="article-list_item-title">Rename Pain</span> <i class="fa-solid fa-angles-right angles-icon"></i> Pain comes and goes. And believe it or not is arbitrary. Raw data from animal organs. Relabel it 'colorful sensation'.
                 Instead of giving so much attention to red/purple/black (a bruised toe, cranky knee, sore calf) try out some other
                 colors (wind passing over forehead, the trees, space arriving before you, the transient levitation of your stride). Give
@@ -99,7 +99,7 @@
             <br>
             <img class="blog-photo-landscape" src="./images/blog-photos/deepSnowLadakh.jpg" alt="himalayan mountains"><span
                 class="caption">Slow and steady up a Himalayan pass</span><br><br>
-            Powering through periods of suffering makes us better. Its key that we enter into training with an openness to
+            Powering through periods of suffering make us better people. Its key that we enter into training with an openness to
             difficulty, that we test our limits but not supersede them, that we come out of periods of training a stronger body and
             more resilient mind. As much as we want chiseled legs and a massive aerobic engine we should also strive for a
             well-fortified mind. With good training we might achieve all three and then<i class="fa-solid fa-minus"></i><br><br>Watch out!
