--- a/blogTheMental.html
+++ b/blogTheMental.html
@@ -71,8 +71,8 @@
             consequence of losing the trail to the brutality of pushing when you are broken—without a strong mind we are lost at
             sea.
             <br><br>
-            Rather than bemoaning difficulty, view each moment of weakness as an opportunity because by surviving the moment, by clearing the
-            obstacle you affirm resilience and build corrective thought patterns which over time become entrenched and arise naturally.<br><br>
+            Rather than bemoaning difficulty, view each moment of weakness as an opportunity. Survive the moment, clear the
+            obstacle and we affirm resilient thought patterns which over time become entrenched and arise naturally.<br><br>
             Here is a list of tactics I've found myself using when the training is challenging (as it should be). The goal of
             these strategies is to promote mindfulness, being present and breaking negativity.<br>
             <ul class="article-list ">
