--- a/blogHome.html
+++ b/blogHome.html
@@ -38,7 +38,17 @@
             <h1 class="header-title">Blog</h1>
         </div>
         </header>
+        <a class="substack-link" target="_blank" href="https://bendhiman.substack.com/">
+            <div class="background-link"><i class="fa-solid fa-link linked-icon"></i></div>
+        <div class="header-link">
+            <div class="child">
+            <h2>Now on Substack!</h2>
+            <p>New Medium / More Content <i class="fa-solid fa-champagne-glasses link-icon"></i></p>
+            </div>
+        </div>
+        </a>
         <div class="blog-article-container container">
+        
             <div class="frame">
                 <a class="blog-link" href="/blogTheMental.html">
                     <div class="blog-entry">
