--- a/home.html
+++ b/home.html
@@ -38,15 +38,6 @@
         </div>
         <div class="icon-container">
             <a class="icon-link tooltip" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@ben_dhiman</span></a>
-            
-            <!-- <a class="icon-link tooltip" href="https://open.spotify.com/user/bdhiman244?si=089d80b951af4fca" target="_blank">
-                <i class="fa-brands fa-spotify spotify-icon"></i>
-                <span class="tooltip-text">Checkout my playlists</span>
-            </a>
-            <a class="icon-link tooltip" href="https://itra.run/RunnerSpace/DHIMAN.Ben/1409387" target="_blank">
-                <i class="fa-solid fa-person-running runner-icon"></i>
-                <span class="tooltip-text-three">ITRA runner profile</span>
-            </a> -->
             <a class="icon-link tooltip" href="https://www.strava.com/athletes/102936151" target="_blank">
                 <i class="fa-brands fa-strava strava-icon"></i>
                 <span class="tooltip-text-four">Strava profile</span>
@@ -57,6 +48,10 @@
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
                         <a href="/Results.html" class="nav__link">Results</a>
+                    </li>
+                    <li class="nav__item">
+                        <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
+                        <a href="/coaching.html" class="nav__link">Coaching</a>
                     </li>
                     <li class="nav__item">
                         <img class="nav-chevron" src="/imgsBw/racing/chevron-right-solid.svg" alt="chevron">
