--- a/Results.html
+++ b/Results.html
@@ -29,6 +29,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                 
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
