new style sheet

--- a/Results.html
+++ b/Results.html
@@ -16,9 +16,9 @@
     <title>Results</title>
     <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/results.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Plaster&family=Roboto+Slab:wght@100;300;500&display=swap"
-        rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Lora:ital@0;1&family=Plaster&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,700;0,800;1,300;1,400&family=Roboto+Slab:wght@100;300;500&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,21 +28,21 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/home2023.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                 
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
-                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
+                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
             </ul>
         </nav>
     </header>
     <section class="title-section container">
         <h1 class="title-text">res<br>ults.</h1>
-        <img class="pyramid-img" src="/images/cluster/pyramid-race-finish.jpg" alt="Summit photo from the Grand Teton">
+        <img class="pyramid-img" src="/images/pyramid-race-finishBW.jpg" alt="finish line pump">
     </section>
     <section class="section-body container">
         <ul class="results__list">
-            <li class="list__title">Races</li>
+            <li class="list__title">&nbsp;</li>
             <li class="results-list__year">2022</li>
             <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:20 <i class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup>
             </li>
