--- a/blogHome.html
+++ b/blogHome.html
@@ -16,9 +16,9 @@
     <title>Blog</title>
     <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="/css/blogHome.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Plaster&family=Roboto+Slab:wght@100;300;500&display=swap"
-        rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Lora:ital@0;1&family=Plaster&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,700;0,800;1,300;1,400&family=Roboto+Slab:wght@100;300;500&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,23 +28,25 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/home2023.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
-                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
+                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
             </ul>
         </nav>
         <div class="container header-container">
             <h1 class="header-title">Blog</h1>
         </div>
         </header>
+        <div class="substack-announcement">
         <a class="substack-link" target="_blank" href="https://bendhiman.substack.com/">
             <div class="background-link"><i class="fa-solid fa-link linked-icon"></i></div>
         <div class="header-link">
             <div class="child">
             <h2>Now on Substack!</h2>
             <p>New Medium / More Content <i class="fa-solid fa-champagne-glasses link-icon"></i></p>
+            </div>
             </div>
         </div>
         </a>
