--- a/contactMF.html
+++ b/contactMF.html
@@ -16,9 +16,9 @@
     <title>Contact</title>
     <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/contactMF.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Plaster&family=Roboto+Slab:wght@100;300;500&display=swap"
-        rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Lora:ital@0;1&family=Plaster&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,700;0,800;1,300;1,400&family=Roboto+Slab:wght@100;300;500&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,7 +28,7 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/home2023.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
     
                  <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
@@ -38,19 +38,20 @@
     </header>
     <div class="shrink-wrap">
         <section class="title-section container col-one">
-            <h1 class="title-text">Cont<br>act.</h1>
+            <h1 class="title-text">part<br>ners.</h1>
             <img class="small-img teton-img" src="/imgsBw/tetonselfieBW.jpg" alt="Summit photo from the Grand Teton">
         </section>
-        <section class="section-one container col-two">
-            <ul class="contact-list">
-                 <li class="contact-list-item"><i class="fa-solid fa-envelope contact-icon"></i><br>bdhiman244@gmail.com</li>
-                <li class="contact-list-item"><i class="fa-solid fa-phone contact-icon"></i><br>+33 672 4353 28</li>
-                <li class="contact-list-item"><i class="fa-brands fa-instagram contact-icon"></i><br><a class="contact-list-link" href="https://www.instagram.com/ben_dhiman/" target="_blank">@ben_dhiman</a></li>
-            </ul>
- 
-            <img class="curly-brace" src="https://upload.wikimedia.org/wikipedia/commons/5/51/AccoladeGaBis.svg" alt="curly-brace">
-        </section>
-
+        <section class="meat col-two">
+      <div class="icon-box">
+          <img class="hoka-logo" src="/images/blog-photos/hokOneLogo.svg" alt="hoka logo">
+          <img class="rrunning-logo" src="/images/blog-photos/rRunninglogo.png" alt="RRunnning logo">
+      </div>
+      <div class="contact">
+          <h2>For all inquiries:</h2>
+          <h4><i class="fa-regular fa-envelope email-icon"></i> bdhiman244@gmail.com</h4>
+        <a class="icon-link" href="https://www.instagram.com/ben_dhiman/" target="_blank"><h4><i class="fa-brands fa-instagram insta-icon"></i> @ben_dhiman</h4></a>
+      </div>
+    </section>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js files/contactMF.js"></script>
