--- a/home.html
+++ b/home.html
@@ -37,10 +37,9 @@
             <h2 class="header__subhead">&nbsp;</h2>
         </div>
         <div class="icon-container">
-            <a class="icon-link tooltip" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i><span class="tooltip-text">@ben_dhiman</span></a>
-            <a class="icon-link tooltip" href="https://www.strava.com/athletes/102936151" target="_blank">
+            <a class="icon-link" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+            <a class="icon-link" href="https://www.strava.com/athletes/102936151" target="_blank">
                 <i class="fa-brands fa-strava strava-icon"></i>
-                <span class="tooltip-text-four">Strava profile</span>
             </a>
         </div>
             <nav class="nav">
