--- a/Results.html
+++ b/Results.html
@@ -28,7 +28,7 @@
         <i class="fa-solid fa-bars nav-toggle"></i>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="/home2023.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                 
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
