--- a/coaching.html
+++ b/coaching.html
@@ -52,7 +52,7 @@
         <h2 class="pitch">
             So much depends upon our preparation and mindset
         </h2>
-        <p class="pitch-subtext">At the next big trail race, be in top form. As your coach we will optimize your training and race preparation to get your best result.</p>
+        <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get resuts!</p>
     </section>
     <section class="section-offering container">
         <h4 class="offering-list-heading">Services</h4>
@@ -81,7 +81,7 @@
     <section class="section-contact container">
   
             <h3 class="list-heading">Why Me?</h3>
-            <p class="pitch-subtext">With me you have the advantage of working with a coach who practices what he preaches. I have been researching and testing training protocol for years and now I want to help you maximize your potential.
+            <p class="pitch-subtext">I have been researching and testing training protocol for years. The success I've garnered as an athlete reflects my devotion to understanding performance and now I want to help you maximize your potential.
             </p>
         <div class="contact-body container">
             <p class="contact-text">Let's Get Started!</p>
