--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
   
         <div class="background-frame">
         <div class="hero-img-container"></div>
-        <h1 class="name-text">b.d</h1>
+        <h1 class="name-text">b.dhiman</h1>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
