--- a/coaching.html
+++ b/coaching.html
@@ -52,7 +52,7 @@
         <h2 class="pitch">
             So much depends upon our preparation and mindset
         </h2>
-        <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get resuts!</p>
+        <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get results!</p>
     </section>
     <section class="section-offering container">
         <h4 class="offering-list-heading">Services</h4>
