--- a/coaching.html
+++ b/coaching.html
@@ -33,6 +33,7 @@
     
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
+                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
             </ul>
         </nav>
     </header>
