blog home cleanup

--- a/blogHome.html
+++ b/blogHome.html
@@ -39,20 +39,19 @@
             <h1 class="header-title">Blog</h1>
         </div>
         </header>
-        <div class="substack-announcement">
-        <a class="substack-link" target="_blank" href="https://bendhiman.substack.com/">
-            <div class="background-link"><i class="fa-solid fa-link linked-icon"></i></div>
-        <div class="header-link">
-            <div class="child">
-            <h2>Now on Substack!</h2>
-            <p>New Medium / More Content <i class="fa-solid fa-champagne-glasses link-icon"></i></p>
-            </div>
-            </div>
-        </div>
-        </a>
         <div class="blog-article-container container">
-        
             <div class="frame">
+                <a class="blog-link" target="_blank" href="https://bendhiman.substack.com/">
+                    <div class="blog-entry">
+                        <img class="blog-thumbnail" src="/images/blog-photos/substackthumbnail.png" alt="substack markup">
+                        <div class="article-date">
+                            15-02-23
+                        </div>
+                        <div class="substack-article-title">
+                            <h2>Now on Substack<br>New Medium, More Content</h2>
+                        </div>
+                    </div>
+                </a>
                 <a class="blog-link" href="/blogTheMental.html">
                     <div class="blog-entry">
                         <img class="blog-thumbnail" src="/images/blog-photos/wrathfulDeity.jpg" alt="Wrathful buddhist deitey">
@@ -60,7 +59,7 @@
                             27-01-23
                         </div>
                         <div class="article-title">
-                            <h2>Training<br>Mental Fortitude</h2>
+                            <h2>Training Mental Fortitude</h2>
                         </div>
                     </div>
                 </a>
@@ -71,7 +70,7 @@
                             12-11-22
                         </div>
                         <div class="article-title">
-                            <h2>Get Elevated:<br>Aerobic Build</h2>
+                            <h2>Time to Ramp Up Your Aerobic Base</h2>
                         </div>
                     </div>
                 </a>
@@ -93,7 +92,7 @@
                             29-10-22
                         </div>
                         <div class="article-title">
-                            <h2>Breaking<br>Through:<br>Grand Raid Reunion</h2>
+                            <h2>Breaking Through:<br>Grand Raid Reunion</h2>
                         </div>
                     </div>
                 </a>
@@ -126,7 +125,7 @@
                        29-07-22
                     </div>
                         <div class="article-title">
-                            <h2>Soreness &<br>Delivery<br>Les Gabizos Skyrace</h2>
+                            <h2>Soreness & Delivery<br>Les Gabizos Skyrace</h2>
                     </div>
                 </div>
             </a>
@@ -137,7 +136,7 @@
                         17-07-22
                     </div>
                         <div class="article-title">
-                            <h2>Bravery &<br>Fromage<br>Valleé D'Ossau 72km</h2>
+                            <h2>Bravery & Fromage<br>Valleé D'Ossau 72km</h2>
                         </div>
                 </div>
                 </a>
