--- a/contactMF.html
+++ b/contactMF.html
@@ -44,6 +44,7 @@
         <section class="meat col-two">
       <div class="icon-box">
           <img class="hoka-logo" src="/images/blog-photos/hokOneLogo.svg" alt="hoka logo">
+          <img class="compress-logo" src="/images/blog-photos/compressportLogo.svg" alt="compressport logo">
           <img class="rrunning-logo" src="/images/blog-photos/rRunninglogo.png" alt="RRunnning logo">
       </div>
       <div class="contact">
