--- a/Results.html
+++ b/Results.html
@@ -43,6 +43,10 @@
     <section class="section-body container">
         <ul class="results__list">
             <li class="list__title">&nbsp;</li>
+            <li class="results-list__year">2023</li>
+            <li class="results-list__item"><span class="race-title">10km de Lacq</span><br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;31:04 
+            </li>
             <li class="results-list__year">2022</li>
             <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:20 <i class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup>
             </li>
