--- a/coaching.html
+++ b/coaching.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="icon" type="image/png" href="/images/favicon6.png">
+    <link rel="icon" type="image/png" href="/images/theSPEEDHIMANlogo2023.png">
     <link rel="stylesheet" href="./css/coaching.css">
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;1,400;1,700&family=Fredoka:wght@300;400;500&family=Lora:ital@0;1&family=Plaster&family=Raleway:ital,wght@0,300;0,500;0,700;0,800;1,300;1,400&family=Roboto+Slab:wght@100;300;500&display=swap"
