--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="icon" type="image/png" href="/images/favicon6.png">
+    <link rel="icon" type="image/png" href="/images/theSPEEDHIMANlogo2023.png">
     <link rel="stylesheet" href="./css/home2023.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
