--- a/Results.html
+++ b/Results.html
@@ -44,6 +44,10 @@
         <ul class="results__list">
             <li class="list__title">&nbsp;</li>
             <li class="results-list__year">2023</li>
+            <li class="results-list__item"><span class="race-title">Penyagolosa CSP</span><br>106km 5600m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;10:35 <i
+                    class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup>
+            </li>
             <li class="results-list__item"><span class="race-title">10km de Lacq</span><br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;31:04 
             </li>
