--- a/home.html
+++ b/home.html
@@ -30,6 +30,9 @@
   
         <div class="background-frame">
         <div class="hero-img-container"></div>
+        <!-- <div class="logo">
+            <img class="logo-img" src="./images/theSPEEDHIMANlogo2023.png" alt="logo">
+        </div> -->
         <h1 class="name-text">b.dhiman</h1>
         <nav class="nav">
             <ul class="nav__list">
