--- a/coaching.html
+++ b/coaching.html
@@ -54,6 +54,16 @@
             So much depends upon our preparation and mindset
         </h2>
         <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get results!</p>
+
+        <h2 class="pitch">Training Plans for:</h2>
+            <div class="image-div">
+            <img class="race_logo" src="/images/grrlogo.png" alt="logo grand raid"><br>
+            <img class="race_logo_small" src="/images/logogrp.png" alt="logo grand raid"><br>
+            <img class="race_logo" src="/images/UTMB.png" alt="logo grand raid">
+            <img class="race_logo-detail" src="/images/Untitledmaraultra.png" alt="logo grand raid">
+            </div>
+
+
     </section>
     <section class="section-offering container">
         <h4 class="offering-list-heading">Services</h4>
