--- a/coaching.html
+++ b/coaching.html
@@ -24,6 +24,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<div class="wrapper">
 <body>
     <header class="nav-section">
         <i class="fa-solid fa-bars nav-toggle"></i>
@@ -146,4 +147,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="./js files/coaching.js"></script>
 </body>
+</div>
 </html>
