--- a/coaching.html
+++ b/coaching.html
@@ -47,7 +47,7 @@
             <h3 class="home-button-text">home</h3>
         </div>
         </a>
-        <p class="preface-hero">Let's reach new heights together!</p>
+        <p class="preface-hero">Train Smart.<br>Work Hard.<br>Have Fun!</p>
     </section>
 <section class="body-content container">
     <section class="section-hype container">
