language and media

--- a/coaching.html
+++ b/coaching.html
@@ -55,7 +55,6 @@
             So much depends upon our preparation and mindset
         </h2>
         <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get results!</p>
-
         <h2 class="pitch">Training Plans for:</h2>
             <div class="image-div">
             <img class="race_logo" src="/images/grrlogo.png" alt="logo grand raid"><br>
@@ -66,6 +65,11 @@
 
 
     </section>
+    <h4 class="language-subhead">Français / English</h4>
+    <div class="flags">
+        <img class="flag-image" src="/images/france-flag-round-icon-128.png" alt="french flag">
+        <img class="flag-image" src="/images/512px-United-kingdom_flag_icon_round.svg.png" alt="french flag">
+    </div>
     <section class="section-offering container">
         <h4 class="offering-list-heading">Services</h4>
         <ul class="offering-list container">
