--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <div class="background-frame">
         <div class="hero-img-container"></div>
         <!-- <div class="logo">
-            <img class="logo-img" src="./images/theSPEEDHIMANlogo2023.png" alt="logo">
+            <img class="logo-img" src="./images/intialsLogo.png" alt="logo">
         </div> -->
         <h1 class="name-text">b.dhiman</h1>
         <nav class="nav">
@@ -48,6 +48,9 @@
                 <li class="nav__item">
                     <a href="/contactMF.html" class="nav__link">Partners</a>
                 </li>
+                <!-- <li class="nav__item">
+                    <a href="/about.html" class="nav__link">about</a>
+                </li> -->
                 <li class="nav__item">
                     <a class="icon-link" href="https://www.instagram.com/ben_dhiman/" target="_blank"><i
                             class="fa-brands fa-instagram instagram-icon"></i></a>
