--- a/about.html
+++ b/about.html
@@ -36,7 +36,25 @@
         </ul>
     </nav>
 </header>
-
+<section class="title-section">
+    <h1 class="title-text-top">Presentation</h1>
+</section>
+<section class="container quick-list">
+        <ul class="container article-list ">
+            <li class="article-list__item"><span class="article-list_item-title">Born</span> <br> 06/11/1991<br>Cincinnati, OH USA</li>
+            <li class="article-list__item"><span class="article-list_item-title">Currently Resides</span> <br>Bagnères-de-Bigorre (65)<br>FRANCE</li>
+            <li class="article-list__item"><span class="article-list_item-title">ITRA Score</span> <br>893</li>
+        </ul>
+</section>
+<section class="container bio">
+<h2 class="article-subhead">Sport</h2>
+<ul class="container article-list ">
+    <li class="article-list__item"><span class="article-list_item-title">Youth</span> <br> I played soccer (futbol) for 15 years, earning first-team all-state in high school and playing 2 seasons at Emory University.</li>
+    <li class="article-list__item"><span class="article-list_item-title">Adventure</span>
+        <br>Across many expedititons I covered roughly 10,000 miles in the mountains. The greater part of my 20s was spent living and working nomadically to pursue my passion for long distance hiking.</li>
+    <li class="article-list__item"><span class="article-list_item-title">Trail</span> <br>In 2017 I did my first ultras. My 'adventure fitness' only got me so far and soon I began training more regularly.</li>
+</ul>
+</section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="./js files/about.js"></script>
 </body>
