--- a/coaching.html
+++ b/coaching.html
@@ -131,11 +131,11 @@
             <h4 class="list-heading">Pricing</h4>
             <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Your Personal Coach</h5>
-            <p class="pricing-list-item-body">Full suite including personalized training program powered by the Nolio app, open communication, and race preparation. I am there for you! <span class="pricing-text">180&euro;/month</span></p>
+            <p class="pricing-list-item-body">Full suite including personalized training program powered by the Nolio app, open communication, and full race plan + strategy. I am there for you! <span class="pricing-text">180&euro;/month</span></p>
             </div>
             <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Training Plan</h5>
-            <p class="pricing-list-item-body">Initial consultation + personalized training plan written 1 month at a time around your goals and schedule. <span class="pricing-text">80&euro;/month</span></p>
+            <p class="pricing-list-item-body">Initial consultation + personalized training plan written 1 month at a time around your goals and schedule. <span class="pricing-text">100&euro;/month</span></p>
                 </div>
                 <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Consultation</h5>
