--- a/blogValOssau.html
+++ b/blogValOssau.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Post</title>
+    <title>Post</title>
     <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="/css/blogBoiler.css">
     <link
@@ -31,7 +31,6 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/philosophyMF.html" class="nav__link">Philosophy</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
