--- a/coaching.html
+++ b/coaching.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Coaching</title>
     <link rel="icon" type="image/png" href="/images/theSPEEDHIMANlogo2023.png">
     <link rel="stylesheet" href="./css/coaching.css">
 <link
