--- a/coaching.html
+++ b/coaching.html
@@ -80,7 +80,7 @@
             <li class="offering-each-list-item">
                 <h5 class="offering-list-item-title">Communication.</h5>
                 <p class="offering-list-item-body">
-                    Unlimited text and email with me, phone call check-in every 1-2 weeks as desired (Francais or English).
+                    Unlimited text and email with me and phone call check-in every month (Francais or English).
                 </p>
             </li>
             <li class="offering-each-list-item">
@@ -134,12 +134,12 @@
             <p class="pricing-list-item-body">Full suite including personalized training program powered by the Nolio app, open communication, and full race plan + strategy. I am there for you! <span class="pricing-text">180&euro;/month</span></p>
             </div>
             <div class="pricing-tier">
-            <h5 class="pricing-list-item-title">Training Plan</h5>
-            <p class="pricing-list-item-body">Initial consultation + personalized training plan written 1 month at a time around your goals and schedule. <span class="pricing-text">100&euro;/month</span></p>
+            <h5 class="pricing-list-item-title">Race Prep (8 weeks or less)</h5>
+            <p class="pricing-list-item-body">Initial consultation + personalized training plan to prepare you for an upcoming race + race plan and nutrition strategy consultation<span class="pricing-text"> 50&euro;/week</span></p>
                 </div>
                 <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Consultation</h5>
-            <p class="pricing-list-item-body">Self-coached? Talking through your training and race prep with a coach can give you fresh insight. I offer phone / video call. <span class="pricing-text">50&euro;/hour</span></p>
+            <p class="pricing-list-item-body">Self-coached? Talking through your training and race prep with a coach can give you fresh insight. I offer phone / video call or meeting face to face if you are in the area. <span class="pricing-text">50&euro;/hour</span></p>
             </div>
         </section>
        </section>
