--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <div class="background-frame">
         <div class="hero-img-container"></div>
         <!-- <div class="logo">
-            <img class="logo-img" src="./images/theSPEEDHIMANlogColorShift.png" alt="logo">
+            <img class="logo-img" src="./images/intitialsLogo.png" alt="logo">
         </div> -->
         <h1 class="name-text">b.dhiman</h1>
         <nav class="nav">
