--- a/coaching.html
+++ b/coaching.html
@@ -135,7 +135,7 @@
             </div>
             <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Race Prep (8 weeks or less)</h5>
-            <p class="pricing-list-item-body">Initial consultation + personalized training plan to prepare you for an upcoming race + race plan and nutrition strategy consultation<span class="pricing-text"> 50&euro;/week</span></p>
+            <p class="pricing-list-item-body">Initial consultation + personalized training plan to prepare you for an upcoming race + race strategy consultation (nutrition/pacing/gear ect)<span class="pricing-text"> 50&euro;/week</span></p>
                 </div>
                 <div class="pricing-tier">
             <h5 class="pricing-list-item-title">Consultation</h5>
