--- a/Results.html
+++ b/Results.html
@@ -44,6 +44,11 @@
         <ul class="results__list">
             <li class="list__title">&nbsp;</li>
             <li class="results-list__year">2023</li>
+            <li class="results-list__item"><span class="race-title">Grand Trail des Templiers</span><br>80km 3490m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;7:00 <i
+                    class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup><br>
+                    <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap" href="https://bendhiman.substack.com/p/know-your-place">Recap</a>
+            </li>
             <li class="results-list__item"><span class="race-title">Andorra Trail 100</span><br>105km 6900m d+<br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;13:36 <i
                     class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
