--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <a href="/coaching.html" class="nav__link">Coaching</a>
                 </li>
                 <li class="nav__item">
-                    <a href="/blogHome.html" class="nav__link">Blog</a>
+                    <a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a>
                 </li>
                 <li class="nav__item">
                     <a href="/contactMF.html" class="nav__link">Partners</a>
