--- a/GRR.html
+++ b/GRR.html
@@ -33,7 +33,7 @@
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Contact</a></li>
-                <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
             </ul>
         </nav>
     </header>
