--- a/Results.html
+++ b/Results.html
@@ -31,7 +31,7 @@
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                 
-                <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
             </ul>
         </nav>
@@ -67,16 +67,16 @@
             <li class="results-list__year">2022</li>
             <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:20 <i class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup><br>
             <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
-                href="./blogGRR.html">Recap</a>
+                href="./GRR.html">Recap</a>
             </li>
             <li class="results-list__item"><span class="race-title">Canfranc-Canfranc</span><br>102km 8848m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;18:28 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup>
                 <br>
                 <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
-                    href="./blogCcRaceReport.html">Recap</a>
+                    href="./CcRaceReport.html">Recap</a>
             </li>
             <li class="results-list__item"><span class="race-title">GTVO</span><br>74km 4600m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;8:30 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
             <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
-                href="./blogValOssau.html">Recap</a></li>
+                href="./ValOssau.html">Recap</a></li>
             <li class="results-list__item"><span class="race-title">Patou Skyrace</span><br>22km 2200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:31 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
             <li class="results-list__item"><span class="race-title">Hautacam Trails</span><br>22km 1650m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:08 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
             <li class="results-list__item"><span class="race-title">Bagneres Classic</span><br>25km 1500m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:09 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
