--- a/coaching.html
+++ b/coaching.html
@@ -32,7 +32,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
     
-                <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
                 <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
             </ul>
