--- a/contactMF.html
+++ b/contactMF.html
@@ -31,7 +31,7 @@
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
     
-                 <li class="nav__item"><a href="/blogHome.html" class="nav__link">Blog</a></li>
+                 <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
                  <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
              </ul>
         </nav>
